src/main/java/org/example/nanobananaprobot/errors/SearchTimeoutException.java
package org.example.nanobananaprobot.errors;

public class SearchTimeoutException extends SearchException {
    public SearchTimeoutException(String message) {
        super(message);
    }
}
